# Picomputer

./: LICENSE  README.md
3mf/: Picomputer.3mf  README.md
circuit/: diagram-kicad.kicad_sch
school/: Description.odt  Presentation.odp
src/: CMakeLists.txt  cl.c  cl.h  font.h  gfx.c  gfx.h  hsync.pio  picomputer.c  rgb.pio  tusb_config.h  usb.c  usb.h  vsync.pio
stepfile/: Case.step  Case_Cover.step  Plug-In_Cover.step  README.md  USB-A_Module_Tray.step
